# s3fm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg
.github/workflows/: ci.yml  lint.yml
docs/: conf.py  index.md  requirements.txt
docs/pages/: api_reference.md  configuration.md  test.md
s3fm/: __main__.py  app.py  base.py  cli.py  enums.py  exceptions.py  id.py  typings.py  utils.py
s3fm/api/: cache.py  config.py  file.py  fs.py  fuzzy.py  history.py  kb.py  s3.py
s3fm/config/: config.py
s3fm/ui/: commandline.py  commandpane.py  error.py  filepane.py  files.py  optionpane.py  options.py  progress.py  spinner.py
tests/: conftest.py  requirements.txt  test_app.py  test_main.py  test_utils.py
tests/api/: test_config.py  test_fs.py  test_history.py  test_kb.py
tests/data/: fs_history.json  s3_list_buckets.json  s3_list_objects.json
tests/ui/: test_error.py  test_filepane.py  test_spinner.py
